--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = 'com.mraof.simumech.Main'
 
 repositories {
     mavenCentral()
