Twitter support, bugfixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ lazy_static = "*"
 discord = {git = "https://github.com/SpaceManiac/discord-rs"}
 retry = "*"
 mime = "0.2" #Otherwise mime_guess will use 0.1
-[replace]
+hyper = "*"
+egg-mode = "*"
