--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["mraof <mraof@mraof.com>"]
 rand = "*"
 regex = { version = "*", features = ["pattern"] }
 lazy_static = "*"
-discord = {git = "https://github.com/SpaceManiac/discord-rs"}
+discord = {git = "https://github.com/ArtemGr/discord-rs"}
 retry = "*"
 mime = "0.2" #Otherwise mime_guess will use 0.1
 hyper = "*"
