Moon is more important now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,16 @@ authors = ["mraof <mraof@mraof.com>"]
 rand = "*"
 regex = { version = "*", features = ["pattern"] }
 lazy_static = "*"
-discord = {git = "https://github.com/ArtemGr/discord-rs", default-features = false}
+discord = {git = "https://github.com/mraof/discord-rs", default-features = false}
 retry = "*"
 mime = "0.2" #Otherwise mime_guess will use 0.1
 hyper = "*"
 hyper-tls = "*"
-egg-mode = "*"
+# egg-mode = "*"
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
-tumblr = {git = "https://github.com/mraof/tumblr-rs"}
+tumblr = {path = "/home/mraof/github/tumblr-rs"}
 meval = "*"
 linked-hash-map = "*"
 futures = "*"
@@ -30,6 +30,8 @@ indexmap = {version = "*", features = ["serde-1"]}
 astro = "*"
 chrono = "*"
 smallvec = "*"
+fnv = "*"
+seahash = "3"
 
 tcpgen = {git = "https://github.com/mraof/tcpgen"}
 morbitgen = {git = "https://github.com/mraof/morbitgen"}
